--- a/pom.xml
+++ b/pom.xml
@@ -162,7 +162,7 @@
 
 
   <build>
-    <finalName>temp</finalName>
+    <finalName>ROOT</finalName>
     <pluginManagement>      <!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
       <plugins>
         <plugin>
