--- a/src/main/resources/META-INF/devDB.properties
+++ b/src/main/resources/META-INF/devDB.properties
@@ -1,4 +1,13 @@
-jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc\:mysql\://localhost\:3306/spring_bank_app_db
+jdbc.driverClassName=org.h2.Driver
+# jdbc.url=jdbc:h2:file:~/test;AUTO_SERVER=TRUE
+jdbc.url=jdbc:h2:mem:testdb
 jdbc.username=root
-jdbc.password=root
+jdbc.password=qwer1234
+
+
+# h2에 classPath 
+
+# spring.datasource.hikari.jdbc-url=jdbc:h2:file:~/test;AUTO_SERVER=TRUE
+# spring.datasource.hikari.username=root
+# spring.datasource.hikari.password=qwer1234
+# spring.datasource.hikari.driver-class-name=org.h2.Driver
