--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,8 @@
     <mysql-version>8.0.22</mysql-version>
     <!-- h2DB 버전-->
     <com.h2database-version>1.4.200</com.h2database-version>
+    <!-- postgre sql 버전-->
+    <org.postgresql-version>42.2.18</org.postgresql-version>
 
 
 
@@ -230,6 +232,12 @@
       <version>${mysql-version}</version>
     </dependency>
 
+<!-- postgresql -->
+<dependency>
+    <groupId>org.postgresql</groupId>
+    <artifactId>postgresql</artifactId>
+    <version>${org.postgresql-version}</version>
+</dependency>
 
 
 
