--- a/src/main/resources/META-INF/prodDB.properties
+++ b/src/main/resources/META-INF/prodDB.properties
@@ -1,4 +1,5 @@
-jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc\:mysql\://localhost\:3306/spring_bank_app_db
+jdbc.driverClassName=org.postgresql.Driver
+# jdbc.url=jdbc:h2:mem:testdb
+jdbc.url=jdbc:postgresql://db:5432/sample
 jdbc.username=root
-jdbc.password=root
+jdbc.password=qwer1234
