--- a/pom.xml
+++ b/pom.xml
@@ -282,10 +282,11 @@
           <artifactId>maven-deploy-plugin</artifactId>
           <version>2.8.2</version>
         </plugin>
+      </plugins>
+    </pluginManagement>
 
-
-
-<plugin>
+    <plugins>
+    <plugin>
 				<groupId>com.mysema.maven</groupId>
 				<artifactId>apt-maven-plugin</artifactId>
 				<version>1.1.3</version>
@@ -303,8 +304,6 @@
 					</execution>
 				</executions>
 			</plugin>
-
-      </plugins>
-    </pluginManagement>
+    </plugins>
   </build>
 </project>
